# aic-server

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
migrations/2025-08-19-034235_create_videos/: down.sql  up.sql
migrations/2025-08-19-041510_create_keyframes/: down.sql  up.sql
proto/: text_embed.proto
src/: main.rs  schema.rs
src/constants/: mod.rs
src/controllers/: mod.rs
src/controllers/v1/: mod.rs
src/controllers/v1/keyframes/: mod.rs
src/controllers/v1/queries/keyframes/: mod.rs
src/controllers/v1/vectors/: mod.rs
src/controllers/v1/vectors/keyframes/: mod.rs
src/controllers/v1/videos/: mod.rs
src/docs/: mod.rs
src/dtos/: mod.rs
src/dtos/keyframes/: mod.rs
src/dtos/videos/: mod.rs
src/entities/keyframes/: mod.rs
src/entities/videos/: mod.rs
src/models/: mod.rs
src/models/dtos/keyframes/: mod.rs
src/models/dtos/vectors/keyframes/: mod.rs
src/models/dtos/vectors/keyframes/requests/: mod.rs
src/models/dtos/videos/: mod.rs
src/models/entities/: mod.rs
src/models/entities/keyframes/: mod.rs
src/models/entities/videos/: mod.rs
src/models/protos/: mod.rs
src/models/states/: mod.rs
src/repositories/keyframes/: mod.rs
src/repositories/videos/: mod.rs
src/services/: mod.rs
src/services/embeddings/: mod.rs
src/services/embeddings/texts/: mod.rs
src/services/keyframes/: mod.rs
src/services/queries/keyframes/: mod.rs
src/services/vector_queries/keyframes/: mod.rs
src/services/vectors/keyframes/: mod.rs
src/services/videos/: mod.rs
src/states/: mod.rs
